v. 0.3.1
	- Fix one of the tests
	- Strengthen the LAMMPS data file exporter so that it can manage systems with non-integer types and non-positive-defined indexes
	- Remove the compiled documentation from the source tree

v. 0.3.0 [c8cbbb7]
	- By default neighbour finders will not consider neighbours particles that share bonds (i.e. that are bonded neighbours).
	- Add a has_bonded_neighbour method to Particle  
	- The LAMMPS data file parser and exporter now support the "molecular" style
	- The LAMMPS dump file parser has been completely revamped and now auto-detects the atom/particle properties listed in the dump file.
	- Bugfixing
		- Fix a bug whereby parsing of strings having fields separated by multiple spaces would fail

v. 0.2.0 [6dfcb24]
	- Add the "mass" and "charge" fields to particles
	- Add support for the "full" atom_style in LAMMPS-related classes
	- Make it possible to use a data file to initialise a LAMMPS dump conf
	- Add first class support for angles and dihedrals
	- Add support for bonds, angles and dihedrals of different types
	- Use a custom class to manage neighbours as done for bonded neighbours
	- Add a method to init the orientation vectors of oxDNA confs
	- Add a new observables that compute cluster sizes (ClusterList)
	- Add an observable to compute the radial distribution function (RDF)
	- Add a method to use PBC to reconstruct molecules
	- Add a method to copy particles (Particle::make_copy)
	- Make the logger use stderr instead of stdout
	- Performance improvements (remove dependencies and use better algorithms all over the code), especially for parsing
	- Add an example featuring parsing and analysis of a LAMMPS data file
	- Add a method to the Topology class (`remove_unappliable_links`) to remove from an already-initialised topology all those links (bonds, angles and
dihedrals) that involve particles that are not present in the given system
	- Bugfixing
		- Fix a bug whereby Topology::bonds would not work on Python